src/App/App2.css
html {
  height: 100%;
  width: 100%;
  overflow: scroll;
  overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent;  /* optional: just make scrollbar invisible */
}


body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: black;

  font-family: Georgia, 'Times New Roman', Times, serif;

  /* overflow: hidden; */
}

h1 {
  margin: 0px;
  /* margin-bottom: 0px; */
  font-size: 4vh;
}

h2 {
  margin: 16px;
}

h3 {
  margin: 12px;
}

.App {
  height: 100%;
  width: 100%;
  text-align: center;

  /* background: linear-gradient(black, white); */
  background-color: black;
  object-fit: contain;
}

.Logo-container {
  margin: auto;
  
  height: 360px;
  width: 100%;

  padding-top: 40px;
  margin-bottom: 20px;

}

.Logo {
  height: 100%;
  /* border: 2vh solid purple; */
  border-radius: 25px;
  box-shadow: 2px 2px 28px #FFDF64;
}

.Logo:active {
  box-shadow: 2px 2px black;
  transform: translateY(2px);
}

.TournamentText-container {
  font-size: 24px;
  /* font-size: 1.3vh; */
  background-color: azure;

  border: 0.3vh solid #FFDF64;
  box-shadow: 4px 4px 28px #FFDF64;
  border-radius: 25px;

  margin: auto;
  margin-top: 30px;
  margin-bottom: 30px;

  padding: 10px;

  width: 93%;
  transform: scale(0.9);

}

.twitter {
  /* transform: scale(1.2); */
  background-color: #FFDF64;

  padding: 3px;
  border-radius: 25px;

}

.twitter a {
  text-decoration: none;
  color: black;
}

.LeaderBoard-container {
  background-color: azure;

  margin: auto;
  width: 80%;
  margin-bottom: 25px;

  border-radius: 25px;

  border: 0.3vh solid #FFDF64;
  box-shadow: 4px 4px 28px #FFDF64;

}

.LeaderBoard-header {
  font-size: 2.8vh;

  padding: 16px 0;
  
  width: 100%;
  border-radius: 25px;
  /* background: linear-gradient(rgba(162, 233, 255, 0.8), azure) */
}

.Score {
  margin: auto;

  border-radius: 25px;
  /* border: 1px solid white; */

  padding: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  width: 80%;

  background-color: black;
  color: red;
}

.top3 {
  border: 0.3vh solid #FFDF64;
}

.Score:last-child {
  margin-bottom: 16px;
}

.player {
  font-weight: 800;
  /* font-size: 1.5vh; */
  font-size: 28px;

  padding: 2px;
  border-radius: 25px;
  
  color: #FFDF64;
}

.player-score {
  font-weight: 800;
  /* font-size: 1.8vh; */
  font-size: 40px;

  padding: 0px;
  margin: 0px;
  border-radius: 25px;

  color: white;

  float: right;
  padding-right: 24px;
}

.place {
  font-weight: 800;
  /* font-size: 4vh; */

  /* unsafe */
  font-size: 40px;
  /* margin: auto; */
  /*        */

  padding: 1px;
  border-radius: 25px;

  color: white;

  float: left;
  /* padding-left: 24px; */
}

.SearchScore-container {
  margin: auto;
  width: 100%;
}

.SearchBar {
  margin: 10px;
  font-size: 2vh;
}

.noResults {
  font-size: 2vh;
}

.searchQuestion {
  color: #FFDF64;
}
                  /*          Media Queries       */
@media screen and (max-width: 650px) {
  .Logo-container {
    height: 150px;
    width: 100%;
    padding-top: 20px;
    margin-bottom: 5vh;
  }
  .TournamentText-container {
    margin-top: 5px;
    margin-bottom: 10px;

    font-size: 2vh;
  
    padding: 4px;
  
    width: 85%;
  }
  .LeaderBoard-container {
    width: 80%;
  }
  .Score {
    padding: 8px;
    margin-top: 4px;
    margin-bottom: 4px;
    width: 70%;
  }
  .player {
    font-size: 3vh;
  }
  .player-score {
    font-size: 3vh;
    padding-left: 8px;
  }
  .twitter {
    padding: 0px;
  }
  .SearchBar {
    font-size: 4vh;
  }
}

